# tts-server

./: .actrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  README.ru.md  compose.yaml  docker-compose.server.yaml  docker-compose.telegram-bot.yaml  launch.bat  launch.py  launch.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-base.txt  requirements-ci.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yaml
.opencode/agents/: frontend.md
cli/: README.md  README.ru.md  __init__.py  __main__.py  bootstrap.py  main.py  runtime.py  runtime_config.py
core/: README.md  README.ru.md  __init__.py  bootstrap.py  config.py  discovery.py  errors.py  metrics.py  observability.py
core/application/: __init__.py  admission_control.py  job_execution.py  tts_app_service.py
core/backends/: __init__.py  base.py  capabilities.py  mlx_backend.py  onnx_backend.py  qwen_fast_backend.py  registry.py  torch_backend.py
core/contracts/: __init__.py  capabilities.py  commands.py  jobs.py  results.py  runtime.py  synthesis.py
core/engines/: __init__.py  config.py  contracts.py  omnivoice.py  scheduler.py
core/infrastructure/: __init__.py  admission_control_local.py  audio_io.py  concurrency.py  job_execution_local.py
core/model_families/: __init__.py  base.py  omnivoice.py  piper.py  plugin.py  qwen3.py  voxcpm.py
core/models/: __init__.py  catalog.py  composite.py  manifest.py  manifest.v1.json
core/planning/: __init__.py  capability_resolver.py  host_probe.py  planner.py
core/registry/: artifacts.py  model_catalog.py  runtime_models.py
core/services/: __init__.py  model_lifecycle.py  model_registry.py  result_cache.py  streaming.py  synthesis_router.py  telemetry.py  tts_service.py
docs/: development-plan.xml  knowledge-graph.xml  operational-packets.xml  requirements.xml  support-matrix.md  technology.xml  telegram-bot-deployment.md  telegram-bot.service  verification-plan.xml
frontend_demo/: README.md  app.js  index.html  styles.css  voice-presets.json
launcher/: __init__.py  __main__.py  main.py
profiles/: README.md  resolver.py  schema.py
profiles/packs/base/: common.txt
profiles/packs/family/: qwen.txt
scripts/: __init__.py  launch-linux.sh  launch-macos.sh  launch-windows.cmd  launch-windows.ps1  runtime_self_check.py  validate_runtime.py
server/: Dockerfile  README.md  README.ru.md  __init__.py  __main__.py  app.py  bootstrap.py
server/api/: __init__.py  auth.py  contracts.py  errors.py  policies.py  responses.py  routes_health.py  routes_models.py  routes_tts.py
server/schemas/: audio.py  errors.py
telegram_bot/: Dockerfile  README.md  README.ru.md  __init__.py  __main__.py  audio.py  bootstrap.py  client.py  config.py  job_orchestrator.py  media.py  observability.py  polling.py  rate_limiter.py  remote_client.py  sender.py
telegram_bot/handlers/: __init__.py  commands.py  dispatcher.py  tts_handler.py
tests/: __init__.py  conftest.py
tests/architecture/: test_import_boundaries.py  test_no_telegram_local_runtime.py
tests/integration/: test_api.py  test_backend_api_metadata.py  test_cli_launchability.py  test_remote_telegram_client.py
tests/integration/test_telegram_adapter/: __init__.py  test_delivery_recovery.py  test_job_integration.py  test_wiring.py
tests/smoke/: test_local_runtime.py
tests/support/: __init__.py  api_fakes.py  remote_server_stub.py
tests/unit/cli/: test_runtime.py
tests/unit/core/: test_admission_control.py  test_audio_io_reference_conversion.py  test_backend_registry.py  test_capabilities.py  test_composite_manifest.py  test_config_and_bootstrap.py  test_discovery.py  test_engine_config.py  test_engine_contracts.py  test_engine_proof_family.py  test_engine_scheduler.py  test_family_plugin.py  test_host_probe.py  test_job_execution.py  test_metrics_observability.py  test_mlx_backend.py  test_model_families.py  test_model_lifecycle.py  test_model_manifest.py  test_omnivoice_engine.py  test_onnx_backend.py  test_qwen3_family_adapter.py  test_qwen_fast_backend.py  test_result_cache.py  test_streaming.py  test_synthesis_planner.py  test_synthesis_router.py  test_telemetry.py  test_torch_backend_clone_guard.py  test_tts_service.py
tests/unit/scripts/: test_family_env_guidance.py  test_launcher_bootstrap_env.py  test_launcher_check_env.py  test_launcher_create_env.py  test_launcher_doctor.py  test_launcher_exec.py  test_launcher_launch.py  test_launcher_plan_run.py  test_root_launchers.py  test_runtime_profiles.py  test_unix_launcher_scripts.py  test_validate_runtime.py  test_windows_launcher_script.py
tests/unit/server/: test_health_routes.py  test_tts_routes.py
tests/unit/test_telegram_bot/: __init__.py  test_audio_sender_client.py  test_commands.py  test_config_bootstrap.py  test_dispatcher.py  test_job_orchestrator.py  test_media.py  test_observability.py  test_operational.py  test_policy.py  test_rate_limiter.py  test_retry_backoff.py  test_startup_self_checks.py
